fixed navbar issue on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,9 +1,7 @@
 /* General Mobile Styles
 ========================================================================== */
   @media only screen and (max-width : 768px) {
-    .animated{
-      width: 1%;
-      font-size: 4.5em;
+
     }
 
 
@@ -26,19 +24,14 @@
 
   /* iPhone 5/SE */
   @media (min-width:320px) and (max-width:320px) {
-  #headerMainText{
-    font-size: 15em;
-  }
+    #headerMainText{
+      font-size: 15em;
+    }
 
-  .navbartitle{
-    font-size: 20px;
-  }
-    
-
-
+    .navbartitle{
+      font-size: 20px;
+    }
   }  
-
-
 
   /* iPhone 6/7/8 */
   @media only screen and (min-width : 375px) and (max-width : 667px) { 
